# cov-project

./: .gitignore  .pre-commit-config.yaml  README.md  example.ipynp  main.py  pyproject.toml  requirements.txt
style_transfer/model/: loss.py  model.py
style_transfer/utils/: __init__.py  image_utils.py  model_utils.py  utils.py
