[tool.poetry]
name = "Style transfer project"
version = "0.1.0"
description = "Initial setup for COV project"
authors = ["Agata Dobrzyniewicz (ayakiri) and Mariia Kurshakova (MKurshakova)"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.3.1"
torchvision = "^0.18.1"
pillow = "^10.3.0"
matplotlib = "^3.9.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
